<resources>
    <string name="app_name">Collision-Warning-System</string>
    <string name="LocationCoordinateText">经纬度坐标</string>
    <string name="DefaultCoordinateText">(0.00000,0.00000)</string>
    <string name="car_img_description">车辆图</string>
    <string name="speedValue">0.0</string>
    <string name="speedTableImg">速度表盘图片</string>
    <string name="speedUnit">m/s</string>
    <string name="send_button_text">测试时延</string>
    <string name="receive_text">接受到的消息</string>
    <string name="obuIdValue">XXX XXX</string>
    <string name="obuIdText">OBU ID:</string>
    <string name="delayDataText">时延数据</string>
    <string name="warn_button">警告</string>
    <string name="distanceList">距离列表</string>
    <string name="limitValue">阈值</string>
    <string name="zeroDot">0.</string>
    <string name="inputLimitValue">阈值</string>
    <string name="changeMode">切换预警模式</string>
</resources>