<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CarInfoFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedValue"
            android:textSize="40sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/speed"
                android:contentDescription="@string/speedTableImg" />

            <TextView
                android:id="@+id/speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedUnit"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <com.txusballesteros.SnakeView
        android:id="@+id/snake"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/location_coordinate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/LocationCoordinateText"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/location_coordinate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/DefaultCoordinateText"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/car_img_description"
        android:scaleType="centerInside"
        android:src="@drawable/vehicle">

    </ImageView>

</LinearLayout>