<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/VehicleInfoLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/location_coordinate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/LocationCoordinateText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/location_coordinate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/DefaultCoordinateText"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/car_img_description"
                android:scaleType="centerInside"
                android:src="@drawable/vehicle">

            </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mapLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:orientation="vertical"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/VehicleInfoLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- 本位置预留给动态创建的地图碎片 -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

